--- a/WebSiteClothesStore/Views/BangSanPham/Edit.cshtml
+++ b/WebSiteClothesStore/Views/BangSanPham/Edit.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Views/HomeLayout/ProductLayout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Chỉnh Sửa Sản Phẩm/h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>BangSanPham</h4>
+        <h4>Bảng Sản Phẩm</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.MaSP)
@@ -123,117 +123,166 @@
                 </div>
             </div>*@
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Anh1, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Anh1, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Anh1, "", new { @class = "text-danger" })
-                <input type="file" name="fileUpload" id="fileUpload" accept="image/*" style="display:none;" />
-                <input type="button" id="btnUpload" value="Chọn" class="btn btn-success" />
-                <img style="margin-top: 10px" width ="100px" height="100px" src="@Model.Anh1" id="pictureUpload" />
+        <div class="hinhAnhCreated">
+            <div class="form-group form-hinhanh">
+                <label class="control-label col-md-2">
+                    Hình ảnh
+                </label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Anh1, new { htmlAttributes = new { @class = "form-control label-hide hinhAnh1 hinhInputHide" } })
+
+                    <input id="Anh1" type="file" name="fileUpload" class="Anh1 inputAnh1" width="150px" height="150px" accept="image/*"
+                           style="display:none;" />
+                    <input type="button" value="Chọn" class="btn btn-success btn-chon btnUpload" data-id="Anh1" />
+                    <img src="" class="Anh1" id="Anh1" width="100px" height="150px" />
+                </div>
+            </div>
+
+
+            <div class="form-group form-hinhanh">
+                <label class="control-label col-md-2">
+                    Hình ảnh
+                </label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Anh2, new { htmlAttributes = new { @class = "form-control label-hide hinhAnh2 hinhInputHide" } })
+
+                    <input id="Anh2" type="file" name="fileUpload" class="Anh2 inputAnh2" width="150px" height="150px" accept="image/*"
+                           style="display:none;" />
+                    <input type="button" value="Chọn" class="btn btn-success btn-chon btnUpload" data-id="Anh2" />
+                    <img src="" class="Anh2" id="Anh2" width="100px" height="150px" />
+                </div>
+            </div>
+
+            <div class="form-group form-hinhanh">
+                <label class="control-label col-md-2">
+                    Hình ảnh
+                </label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Anh3, new { htmlAttributes = new { @class = "form-control label-hide hinhAnh3 hinhInputHide" } })
+
+                    <input id="Anh3" type="file" name="fileUpload" class="Anh3 inputAnh3" width="150px" height="150px" accept="image/*"
+                           style="display:none;" />
+                    <input type="button" value="Chọn" class="btn btn-success btn-chon btnUpload" data-id="Anh3" />
+                    <img src="" class="Anh3" id="Anh3" width="100px" height="150px" />
+                </div>
+            </div>
+
+            <div class="form-group form-hinhanh">
+                <label class="control-label col-md-2">
+                    Hình ảnh
+                </label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Anh4, new { htmlAttributes = new { @class = "form-control label-hide hinhAnh4 hinhInputHide" } })
+
+                    <input id="Anh4" type="file" name="fileUpload" class="Anh4 inputAnh4" accept="image/*"
+                           style="display:none;" />
+                    <input type="button" value="Chọn" class="btn btn-success btn-chon btnUpload" data-id="Anh4" />
+                    <img src="" class="Anh4" id="Anh4" width="100px" height="150px" />
+                </div>
+            </div>
+
+            <div class="form-group form-hinhanh">
+                <label class="control-label col-md-2">
+                    Hình ảnh
+                </label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Anh5, new { htmlAttributes = new { @class = "form-control label-hide hinhAnh5 hinhInputHide" } })
+
+                    <input id="Anh5" type="file" name="fileUpload" class="Anh5 inputAnh5" width="150px" height="150px" accept="image/*"
+                           style="display:none;" />
+                    <input type="button" value="Chọn" class="btn btn-success btn-chon btnUpload" data-id="Anh5" />
+                    <img src="" class="Anh5" id="Anh5" width="100px" height="150px" />
+                </div>
             </div>
         </div>
 
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Anh2, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Anh2, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Anh2, "", new { @class = "text-danger" })
-                <input type="file" name="fileUpload" id="fileUpload" accept="image/*" style="display:none;" />
-                <input type="button" id="btnUpload" value="Chọn" class="btn btn-success" />
-                <img style="margin-top: 10px" src="@Model.Anh2" id="pictureUpload" />
-            </div>
-        </div>
-
-      
-
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.Anh3, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Anh3, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Anh3, "", new { @class = "text-danger" })
-                    <input type="file" name="fileUpload" id="fileUpload" accept="image/*" style="display:none;" />
-                    <input type="button" id="btnUpload" value="Chọn" class="btn btn-success" />
-                    <img style="margin-top: 10px" src="@Model.Anh3" id="pictureUpload" />
-                </div>
-            </div>
-
-            
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Anh4, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Anh4, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Anh4, "", new { @class = "text-danger" })
-                    <input type="file" name="fileUpload" id="fileUpload" accept="image/*" style="display:none;" />
-                    <input type="button" id="btnUpload" value="Chọn" class="btn btn-success" />
-                    <img style="margin-top: 10px" src="@Model.Anh4" id="pictureUpload" />
-                </div>
-            </div>
-
-            
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Anh5, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Anh5, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Anh5, "", new { @class = "text-danger" })
-                    <input type="file" name="fileUpload" id="fileUpload" accept="image/*" style="display:none;" />
-                    <input type="button" id="btnUpload" value="Chọn" class="btn btn-success" />
-                    <img style="margin-top: 10px" src="@Model.Anh5" id="pictureUpload" />
-                </div>
-            </div>*@
-
-           
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
+
+
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
+        </div>
+    </div>
+    
 }
 
 <div>
     @Html.ActionLink("Back to List", "ListSanPham")
 </div>
 
+<style>
+    .hinhAnhCreated {
+        border: 2px solid black;
+        display: flex;
+        height: 50%;
+        width: 30%;
+    }
+
+    .form-hinhanh {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .hinhInputHide {
+        display: none;
+    }
+
+    .form-horizontal {
+        width: 82%;
+        /* display: inline-block; */
+        position: relative;
+        left: 50%;
+        transform: translateX(-29%);
+    }
+</style>
 @section upload
-        {
+{
     <script>
+
         $(function () {
-            $('#btnUpload').click(function () {
-                $('#fileUpload').trigger('click');
+            $('.btnUpload').click(function () {
+                var idInputFile = $(this).attr("data-id");
+                $('.' + idInputFile).trigger('click');
+                $('.' + idInputFile).change(function () {
+                    console.log(idInputFile);
+                    if (window.FormData !== undefined) {
+                        console.log("Vô nè");
+                        var fileUpload = $('.' + idInputFile).get(0);
+                        console.log(fileUpload);
+                        var files = fileUpload.files;
+                        console.log(files);
+                        var formData = new FormData();
+                        console.log(formData);
+                        formData.append('file', files[0]);
+                        $.ajax(
+                            {
+                                type: 'POST',
+                                url: '/BangSanPham/ProcessUpload',
+                                contentType: false,
+                                processData: false,
+                                data: formData,
+                                success: function (urlImage) {
+                                    $('.' + idInputFile).attr('src', urlImage);
+                                    $('.hinh' + idInputFile).val(urlImage);
+                                },
+                                error: function (err) {
+                                    alert('Error ', err.statusText);
+
+                                }
+                            });
+                    }
+                });
             });
         });
-        $('#fileUpload').change(function () {
-            if (window.FormData !== undefined) {
-                var fileUpload = $('#fileUpload').get(0);
-                var files = fileUpload.files;
-                var formData = new FormData();
-                formData.append('file', files[0]);
 
-                $.ajax(
-                    {
-                        type: 'POST',
-                        url: '/BangSanPham/ProcessUpload',
-                        contentType: false,
-                        processData: false,
-                        data: formData,
-                        success: function (urlImage) {
 
-                            $('#pictureUpload').attr('src', urlImage);
-                            $('#Anh1').val(urlImage);
-                            
-                           
-                        },
-                        error: function (err) {
-                            alert('Error ', err.statusText);
-                        }
-                    });
-            }
-        });
     </script>
 }
